--- a/wallet/res/layout/wallet_activity_onepane_vertical.xml
+++ b/wallet/res/layout/wallet_activity_onepane_vertical.xml
@@ -8,7 +8,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="0px"
 		android:layout_weight="1"
-		android:background="@drawable/middle"
+		android:background="@color/bg_panel"
 		android:orientation="vertical" >
 
 		<fragment
